--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,21 +14,35 @@
                     Welcome, <span id="username">Username</span>!
                 </h2>
             </div>
-            <div class="dropdown is-right is-hoverable">
-                <div class="dropdown-trigger">
-                    <button class="button is-primary" aria-haspopup="true" aria-controls="dropdown-menu">
-                        <span class="icon is-small">
-                            <i class="fas fa-user" aria-hidden="true"></i>
-                        </span>
-                        <span class="icon is-small">
-                            <i class="fas fa-angle-down" aria-hidden="true"></i>
-                        </span>
-                    </button>
+            <div class="is-flex is-align-items-center">
+                <div class="field has-addons mr-4">
+                    <div class="control">
+                        <input class="input" type="text" id="searchInput" placeholder="Search inventory...">
+                    </div>
+                    <div class="control">
+                        <button class="button is-primary" id="searchButton">
+                            <span class="icon is-small">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </button>
+                    </div>
                 </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                    <div class="dropdown-content">
-                        <a href="#" id="updateProfile" class="dropdown-item">Update Profile</a>
-                        <a href="#" id="logoutButton" class="dropdown-item">Logout</a>
+                <div class="dropdown is-right is-hoverable">
+                    <div class="dropdown-trigger">
+                        <button class="button is-primary" aria-haspopup="true" aria-controls="dropdown-menu">
+                            <span class="icon is-small">
+                                <i class="fas fa-user" aria-hidden="true"></i>
+                            </span>
+                            <span class="icon is-small">
+                                <i class="fas fa-angle-down" aria-hidden="true"></i>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                        <div class="dropdown-content">
+                            <a href="#" id="updateProfile" class="dropdown-item">Update Profile</a>
+                            <a href="#" id="logoutButton" class="dropdown-item">Logout</a>
+                        </div>
                     </div>
                 </div>
             </div>
