--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                 <div class="control">
                     <button class="button is-primary" type="submit">Login</button>
                 </div>
+                <div class="notification is-danger is-hidden" id="loginError"></div>
             </form>
             <p class="mt-4">Don't have an account yet? <a href="#" id="showRegisterForm">Register</a></p>
         </div>
@@ -63,6 +64,7 @@
                 <div class="control">
                     <button class="button is-primary" type="submit">Register</button>
                 </div>
+                <div class="notification is-danger is-hidden" id="registerError"></div>
             </form>
             <p class="mt-4">Already have an account? <a href="#" id="showLoginForm">Login</a></p>
         </div>
