--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="column is-half">
         <div id="loginSection">
             <h2 class="title">Login</h2>
-            <form id="loginForm">
+            <form id="login-form" method="POST">
                 <div class="field">
                     <label class="label" for="username">Username:</label>
                     <div class="control">
