--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="columns is-centered">
-    <div class="column is-half">
+    <div class="column is-full-mobile is-half-tablet is-one-third-desktop">
         <div id="loginSection">
             <h2 class="title">Login</h2>
             <form id="login-form" method="POST">
