--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -3,6 +3,8 @@
 {% block title %}Update Profile{% endblock %}
 
 {% block content %}
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+</nav>
 <section class="section">
     <div class="container">
         <h1 class="title">Update Profile</h1>
