--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,24 +18,16 @@
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item is-primary" href="/inventory">Inventory Management</a>
-            <a class="navbar-item is-primary" href="/report">Reports</a>
-        </div>
-
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="field has-addons">
-                    <div class="control">
-                        <input class="input" type="text" id="searchInput" placeholder="Search inventory...">
-                    </div>
-                    <div class="control">
-                        <button class="button is-primary" id="searchButton">
-                            <span class="icon is-small">
-                                <i class="fas fa-search"></i>
-                            </span>
-                        </button>
-                    </div>
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link is-primary">Reports</a>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="/report/inventory_levels?download=true">Download Inventory Levels Report</a>
+                    <a class="navbar-item" href="/report/inventory_taken?download=true">Download Inventory Taken Report</a>
+                    <a class="navbar-item" href="/report/user_activity?download=true">Download User Activity Report</a>
                 </div>
             </div>
+        </div>
+
             <div class="navbar-item">
                 <div class="dropdown is-right is-hoverable is-mobile custom-dropdown">
                     <div class="dropdown-trigger">
@@ -66,7 +58,6 @@
         </div>
     </div>
 </nav>
-
 <section class="section">
     <div class="container">
         <div class="columns is-multiline">
@@ -82,11 +73,10 @@
                     </header>
                     <div class="card-content">
                         <div class="content">
-                            <p>Total Items: 120</p>
+                            <p class="total-items">Total Sku: 0</p>
                             <ul>
                                 <li><a class="has-text-primary" href="/inventory">View Inventory</a></li>
                                 <li><a class="has-text-primary" href="/add_inventory">Add Inventory</a></li>
-                                <li><a class="has-text-primary" href="/update_inventory">Update Inventory</a></li>
                             </ul>
                         </div>
                     </div>
@@ -105,7 +95,10 @@
                     <div class="card-content">
                         <div class="content">
                             <p>Pending Tasks: 5</p>
-                            <a class="has-text-primary" href="/take_inventory" id="takeInventory">Take Inventory</a>
+                            <ul>
+                            <li><a class="has-text-primary" href="/take_inventory" id="takeInventory">Take Inventory</a></li>
+                            <li></li><a class="has-text-primary" href="/update_inventory">Update Inventory</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -157,7 +150,7 @@
     <div class="container">
         <div class="columns">
             <div class="column">
-                <h2 class="title">Expiring Soon</h2>
+                <h2 class="title">Products Expiring Soon</h2>
                 <div class="chart-container" style="position: relative; height:300px; width:300px">
                     <canvas id="expiringSoonChart"></canvas>
                 </div>
