--- a/templates/take_inventory.html
+++ b/templates/take_inventory.html
@@ -3,6 +3,9 @@
 {% block title %}Take Inventory{% endblock %}
 
 {% block content %}
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+</nav>
+
 <section class="section">
     <div class="container">
         <h1 class="title">Take Inventory</h1>
